feat: migrate meteor settings file to new places (#1781)
