# packages/openapi/src/generated/openapi.yaml
@@ -2839,6 +2839,29 @@ paths:
                     rundownGlobalPiecesPrepareTime:
                       type: number
                       description: How long before their start time a rundown owned piece be added to the timeline
+                    autoRewindLeavingSegment:
+                      type: boolean
+                      description: Should the segment in the Rundown view automatically rewind after it stops being live
+                    disableBlurBorder:
+                      type: boolean
+                      description: Disable the blur border in the RundownView
+                    allowGrabbingTimeline:
+                      type: boolean
+                      description: Allow grabbing the entire timeline to scroll it
+                    useCountdownToFreezeFrame:
+                      type: boolean
+                      description: >-
+                        If true, countdowns of videos will count down to the last freeze-frame of the video instead of
+                        to the end of the video
+                    defaultDisplayDuration:
+                      type: number
+                      description: Default duration (in milliseconds) to use to render parts when no duration is provided
+                    defaultTimeScale:
+                      type: number
+                      description: Default time scale zooming for the timelines in the UI
+                    followOnAirSegmentsHistory:
+                      type: number
+                      description: How many segments of history to show when scrolling back in time (0 = show current segment only)
                   required:
                     - frameRate
                     - mediaPreviewsUrl
@@ -3055,6 +3078,31 @@ paths:
                           rundownGlobalPiecesPrepareTime:
                             type: number
                             description: How long before their start time a rundown owned piece be added to the timeline
+                          autoRewindLeavingSegment:
+                            type: boolean
+                            description: Should the segment in the Rundown view automatically rewind after it stops being live
+                          disableBlurBorder:
+                            type: boolean
+                            description: Disable the blur border in the RundownView
+                          allowGrabbingTimeline:
+                            type: boolean
+                            description: Allow grabbing the entire timeline to scroll it
+                          useCountdownToFreezeFrame:
+                            type: boolean
+                            description: >-
+                              If true, countdowns of videos will count down to the last freeze-frame of the video
+                              instead of to the end of the video
+                          defaultDisplayDuration:
+                            type: number
+                            description: Default duration (in milliseconds) to use to render parts when no duration is provided
+                          defaultTimeScale:
+                            type: number
+                            description: Default time scale zooming for the timelines in the UI
+                          followOnAirSegmentsHistory:
+                            type: number
+                            description: >-
+                              How many segments of history to show when scrolling back in time (0 = show current segment
+                              only)
                         required:
                           - frameRate
                           - mediaPreviewsUrl
@@ -3227,6 +3275,29 @@ paths:
                     rundownGlobalPiecesPrepareTime:
                       type: number
                       description: How long before their start time a rundown owned piece be added to the timeline
+                    autoRewindLeavingSegment:
+                      type: boolean
+                      description: Should the segment in the Rundown view automatically rewind after it stops being live
+                    disableBlurBorder:
+                      type: boolean
+                      description: Disable the blur border in the RundownView
+                    allowGrabbingTimeline:
+                      type: boolean
+                      description: Allow grabbing the entire timeline to scroll it
+                    useCountdownToFreezeFrame:
+                      type: boolean
+                      description: >-
+                        If true, countdowns of videos will count down to the last freeze-frame of the video instead of
+                        to the end of the video
+                    defaultDisplayDuration:
+                      type: number
+                      description: Default duration (in milliseconds) to use to render parts when no duration is provided
+                    defaultTimeScale:
+                      type: number
+                      description: Default time scale zooming for the timelines in the UI
+                    followOnAirSegmentsHistory:
+                      type: number
+                      description: How many segments of history to show when scrolling back in time (0 = show current segment only)
                   required:
                     - frameRate
                     - mediaPreviewsUrl
